USWDS-3469 - Header: Fix mobile subnav in IE11.
Fixes: https://github.com/uswds/uswds/issues/3469

Our old friend `flex-basis: 0`. This changes the value to `auto` so the
width is correctly rendered in IE11. There's also an issue I discovered
regarding long navigation links extending beyond viewport because of:

`flex: 1 0 0`

The flex-shrink value was making it stay the same width and it'd break out
of viewport. These values could be adjusted to make sure they don't shrink/grow
too much.

--- a/src/stylesheets/components/_megamenu.scss
+++ b/src/stylesheets/components/_megamenu.scss
@@ -10,6 +10,7 @@
 .usa-megamenu {
   .usa-col {
     @include u-flex(1);
+    flex-basis: auto;
     @include at-media($theme-header-min-width) {
       // needs this round() to avoid a compile bug
       @include u-flex(round(12 / $theme-megamenu-columns));
